<resources>
    <string name="app_name">TechCash</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="email_">Email</string>
    <string name="error_data_loading">When loading data error has occurred. Check your network connection.</string>
    <string name="msg_loading">Please wait...</string>
    <string name="msg_account_blocked">This account is blocked by Admin.</string>
    <string name="referal_reward">Points Received From Invitation</string>
    <string name="payment">Payment</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_desc">The best way to Earn Money from Cash King App!</string>
    <string name="slide_2_desc">Spin The Wheel to Earn Coins!</string>
    <string name="slide_3_desc">Invite your Friends to Earn More Coins!</string>
    <string name="settings_account_id">account_id</string>
    <string name="settings_file">setting</string>
    <string name="lets_start">Lets get Started</string>
    <string name="invite">Invite Friend Earn More</string>


    <string name="facebook_app_id" translatable="false">602453204860978</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb602453204860978</string>
    <string name="facebook_client_token" translatable="false">a4ac239d9776fce311975b56fd9d1a2e</string>

    <!--oneSignal-->
    <string name="one_signal_app_id" translatable="false">79e8150d-6ad3-4e58</string>

    <!--profile strings-->
    <string name="privacy_policy" translatable="false">https://google.com</string>
    <string name="terms_of_service" translatable="false">https://google.com</string>
    <string name="contect_email" translatable="false">abc@mail.com</string>
    <!--profile strings end-->

    <!--login text-->
    <string-array name="login_text">
        <item>Play Games and Win Cash\nRewards</item>
        <item>Earn Coins by Completing Simple\ntask</item>
        <item>Redeem Your Coins for Cash\nRewards</item>
    </string-array>

    <!--Spin coins-->
    <string name="spin_coin_1" translatable="false">5</string>
    <string name="spin_coin_2" translatable="false">7</string>
    <string name="spin_coin_3" translatable="false">15</string>
    <string name="spin_coin_4" translatable="false">10</string>
    <string name="spin_coin_5" translatable="false">20</string>
    <string name="spin_coin_6" translatable="false">5</string>
    <string name="spin_coin_7" translatable="false">100</string>
    <string name="spin_coin_8" translatable="false">1</string>
    <string name="spin_coin_9" translatable="false">50</string>
    <string name="spin_coin_10" translatable="false">10</string>
    <!--Spin coins End-->

    <!-- Ad networks-->
    <!--AyetStudio-->
    <string name="AYET_APP_KEY" translatable="false">4c8d5fe9f6e4a6f29d81ea1a4c8962c7</string>
    <string name="AYET_ADSLOT" translatable="false">offer_wall</string>
    <!--AppLovin-->
    <string name="App_lovin_sdk_key" translatable="false">mEHaFbmF44TizDyLJJ6XCN4</string>
    <!--Unity Ads false for live test true for test ads-->
    <bool name="test_mode">false</bool>
    <!-- Ad networks End-->

    <!--Welcome slider text-->
    <string name="slide_three_description" translatable="false">You can redeem your coins\nfor Paytm, Google Play, Pubg UC\nand FreeFire Diamonds etc.</string>
    <string name="slide_three_title" translatable="false">Rewards</string>
    <string name="slide_two_title" translatable="false"><![CDATA[Refer & Earn]]></string>
    <string name="slide_two_description" translatable="false">Best way to earn more coins by\nreferral is to share with your friends\nand family, You both will earn\ngood amount of coins</string>
    <string name="slide_one_title" translatable="false">Play Games</string>
    <string name="slide_one_description" translatable="false">Play games, complete tasks\nand collect coins</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="redeem_detail_text">Software testing is the process of verifying a system with the purpose of identifying any errors, gaps or missing requirement versus the actual requirement. Software testing is broadly categorised into two types - functional testing and non-functional testing.</string>

    <!-- game point per minute-->
    <string name="game_points">30</string>

    <integer name="adcolony_video_points">25</integer>
    <integer name="iron_source_video_point">15</integer>
    <integer name="startapp_video_point">30</integer>
    <integer name="vungle_video_point">20</integer>
    <integer name="unity_video_point">10</integer>
    <integer name="applovin_video_point">5</integer>
    <integer name="yodo1_video_point">35</integer>
    <integer name="admob_video_point">40</integer>
    <integer name="chartboost_video_points">50</integer>

    <string name="enter_email">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="password_again">Re-Enter Password</string>
    <string name="login">Login</string>
    <string name="or">------ OR ------</string>
    <string name="didNotSign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="enter_name">Enter Name</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_title">Enter your registered email id and OTP will be sent. Enter OTP below to reset password.</string>
    <string name="reset">Reset</string>
    <string name="resend_otp">Did not get OTP? Resend</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="change_password">Change Password</string>
    <string name="noAppsFound">No More Apps Found</string>
    <string name="instructions">Instructions</string>
    <string name="super_coin">Available Coins:</string>
    <string name="collect">Collect</string>
    <string name="better_luck">Better Luck Next Time</string>
    <string name="you_won">Congratulation! \nYou Won…</string>
    <string name="read_and_earn"><![CDATA[Read & Earn]]></string>
    <string name="noWebsiteFound">No More Articles Founds</string>
    <string name="scratch">Lucky Scratch</string>
    <string name="didNotSign_up1">Don\'t have an account ? <font color="#f34e71">Sign up here.</font></string>
    <string name="already_have_account">Already have an account? <font color="#f34e71">Sign in.</font></string>
    <string name="welcome_back">Welcome back!</string>
</resources>