<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".csm.fragment.ForgotFragment">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/login_back"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/black"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_marginEnd="@dimen/dimen_10dp"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:elevation="8dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:id="@+id/otp_base_lyt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:layout_marginBottom="@dimen/dimen_20dp"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/forgot_text_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginBottom="4dp"
                        android:gravity="center"
                        android:text="@string/forgot_password_title"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email_lyt"
                        style="@style/LoginTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/forgot_text_title"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="4dp"
                        app:counterTextColor="@color/colorPrimary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/reset_email_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_email"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:id="@+id/otp_lyt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/email_lyt"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:gravity="center"
                        android:visibility="visible">

                        <in.aabhasjindal.otptextview.OtpTextView
                            android:id="@+id/otpEditText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/dimen_5dp"
                            android:textColor="@color/black"
                            android:visibility="visible"
                            app:bar_enabled="false"
                            app:bar_height="2dp"
                            app:height="40dp"
                            app:length="6"
                            app:otp_box_background="@drawable/button_bg"
                            app:otp_text_size="24dp"
                            app:width="40dp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/resend_otp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/otp_lyt"
                        android:layout_gravity="center"
                        android:layout_margin="3dp"
                        android:gravity="end"
                        android:text="@string/resend_otp"
                        android:textColor="@color/colorPrimary"
                        android:visibility="gone" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/reset_password_btn"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/resend_otp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:layout_marginBottom="4dp"
                        android:background="@drawable/auth_button_shape"
                        android:text="@string/reset"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/reset_password_lyt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:layout_marginBottom="@dimen/dimen_20dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="@string/enter_new_password"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/LoginTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="4dp"
                        android:visibility="visible"
                        app:counterTextColor="@color/colorPrimary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/new_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_new_password"
                            android:inputType="text"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/change_password_btn"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:layout_marginBottom="4dp"
                        android:background="@drawable/auth_button_shape"
                        android:text="@string/change_password"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </RelativeLayout>

    </RelativeLayout>