<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="csm.fragment.ScratchFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="7dp"
            android:gravity="center_vertical">

            <LinearLayout
                android:id="@+id/pro_lin"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="25dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/arrow_back"
                    app:tint="@color/white" />

                <RelativeLayout
                    android:id="@+id/prof"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/pro_img"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_centerVertical="true"
                        android:outlineSpotShadowColor="@color/white"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/ic_launcher_round"
                        app:civ_border_color="#FDA62F"
                        app:civ_border_overlay="true"
                        app:civ_border_width="2.5dp" />


                    <!--  <LinearLayout
                          android:layout_width="10dp"
                          android:layout_height="10dp"
                          android:background="#36256C"
                          android:layout_below="@id/rank_shap"
                          android:layout_alignParentRight="true"
                          android:layout_marginRight="35dp"
                          android:layout_marginTop="-10"-->

                    <LinearLayout
                        android:id="@+id/rank_shap"
                        android:layout_width="17dp"
                        android:layout_height="17dp"
                        android:layout_below="@id/pro_img"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="-17dp"
                        android:layout_marginRight="02dp"
                        android:background="@drawable/spin_rank">

                        <TextView
                            android:id="@+id/rank"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/bold"
                            android:gravity="center"
                            android:text="99"
                            android:textColor="@color/white"
                            android:textSize="7sp" />
                    </LinearLayout>
                </RelativeLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingLeft="0dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bold"
                        android:text="Scratch"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/name_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bold"
                        android:text="Gourav"
                        android:textColor="@color/white"
                        android:textSize="11sp" />
                </LinearLayout>

            </LinearLayout>


            <RelativeLayout
                android:id="@+id/poi"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="-20dp"
                    android:layout_toStartOf="@+id/lin_points"
                    android:src="@drawable/rupee" />

                <LinearLayout
                    android:id="@+id/lin_points"
                    android:layout_width="wrap_content"
                    android:layout_height="23dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/coin_back"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <TextView
                        android:id="@+id/points"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/bold"
                        android:gravity="center"
                        android:paddingLeft="7dp"
                        android:textColor="@color/white"
                        android:textSize="11sp" />
                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:gravity="center"
            android:text="@string/scratch"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/limit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />


        <androidx.cardview.widget.CardView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:elevation="4dp"
            android:layout_marginBottom="@dimen/dimen_10dp"
            app:cardCornerRadius="@dimen/dimen_10dp"
            app:cardElevation="4dp">


            <dev.skymansandy.scratchcardlayout.ui.ScratchCardLayout
                android:id="@+id/scratch_view_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:scratchDrawable="@drawable/scratch"
                app:scratchEnabled="true"
                app:scratchRevealFullAtPercent="40"
                app:scratchWidth="40dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:src="@drawable/congo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:gravity="center"
                        android:text="@string/you_won"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textView_points_show"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/you_won"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="12sp" />

                </LinearLayout>

            </dev.skymansandy.scratchcardlayout.ui.ScratchCardLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/banner_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent" />

</RelativeLayout>